# Nare

./: CMakeLists.txt  Nare.sln  README.md
Launcher/: CMakeLists.txt  Launcher.vcxproj
Launcher/assets/shaders/: FlatColour.glsl  Standard.glsl  Texture.glsl
Launcher/src/: Launcher.cpp  Launcher2D.cpp  Launcher2D.h
Nare/: CMakeLists.txt  Nare.vcxproj  Nare.vcxproj.filters
Nare/src/: Nare.h  nrpch.cpp  nrpch.h
Nare/src/Nare/: Application.cpp  Application.h  ComponentManager.h  Coordinator.cpp  Coordinator.h  Core.h  Entity.cpp  Entity.h  Entry.hpp  IComponentArray.h  Input.h  Keycodes.h  Layer.cpp  Layer.h  Log.cpp  Log.h  Logger.cpp  Logger.h  MouseButtonCodes.h  NareMath.h  SystemManager.h  Timestep.h  Window.h
Nare/src/Nare/Core/: Application.cpp  Application.h  Core.h  Entry.hpp  Input.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  NareMath.h  Window.h
Nare/src/Nare/Events/: ApplicationEvent.h  Event.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h
Nare/src/Nare/Mathf/: Mathf.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Nare/src/Nare/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Nare/src/Nare/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Nare/src/Nare/Renderer/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Nare/src/Nare/Scene/: Component.h  ComponentArray.h  ComponentManager.h  Components.h  Coordinator.h  Entity.h  Scene.cpp  Scene.h  System.h  Transform.cpp  Transform.h
Nare/src/Nare/Utils/: Singleton.h  Utility.h
bin-int/Debug-Win32/GLFW/GLFW.tlog/: GLFW.lastbuildstate
bin-int/Debug-Win32/Launcher/: Launcher.exe.recipe  vc143.idb
bin-int/Debug-Win32/Launcher/Launcher.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-Win32/Nare/Nare.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
